--- a/app/views/help_posts/index.html.erb
+++ b/app/views/help_posts/index.html.erb
@@ -3,10 +3,12 @@
   <%= link_to help_post_path(help_post.id) do %>
     <%= attachment_image_tag help_post, :image %>
   <% end %>
-  <%# <p>投稿ユーザー画像：<%= image_tag('sample-author1.jpg')</p> %>
+  <%= attachment_image_tag help_post.user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg" %>
   <p>タイトル：<%= help_post.title %></p>
   <p>参考URL : <%= help_post.url %></p>
   <p>説明：<%= help_post.description %></p>
   <p>ユーザーネーム：<%= help_post.user.name %></p>
+  <p><%= link_to "#{help_post.help_comments.count} コメント", help_post_path(help_post.id) %></p>
 </div>
 <% end %>
+
