--- a/app/views/help_posts/new.html.erb
+++ b/app/views/help_posts/new.html.erb
@@ -1,4 +1,10 @@
 <h1>記事投稿フォーム</h1>
+<% if @post_image.errors.any? %>
+  <%= @post_image.errors.count %>件のエラーが発生しました
+  <% @post_image.errors.full_messages.each do |message| %>
+    <%= message %>
+  <% end %>
+<% end %>
 <%= form_with model: @help_post, local:true do |f| %>
   <h4>画像</h4>
   <%= f.attachment_field :image %>
