--- a/app/views/help_posts/show.html.erb
+++ b/app/views/help_posts/show.html.erb
@@ -13,7 +13,7 @@
 <div>
 <p>コメント件数：<%= @help_post.help_comments.count %></p>
 <% @help_post.help_comments.each do |help_comment| %>
-  <%= attachment_image_tag post_comment.user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg" %>
+  <%= attachment_image_tag help_comment.user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg" %>
   <%= help_comment.user.name %>
   <%= help_comment.created_at.strftime('%Y/%m/%d') %><%= help_comment.comment %>
   <% if help_comment.user == current_user %>
