--- a/app/views/help_posts/index.html.erb
+++ b/app/views/help_posts/index.html.erb
@@ -1,14 +1,69 @@
-<% @help_posts.each do |help_post| %>
-<div>
-  <%= link_to help_post_path(help_post.id) do %>
-    <%= attachment_image_tag help_post, :image %>
-  <% end %>
-  <%= attachment_image_tag help_post.user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg" %>
-  <p>タイトル：<%= help_post.title %></p>
-  <p>参考URL : <%= help_post.url %></p>
-  <p>説明：<%= help_post.description %></p>
-  <p>ユーザーネーム：<%= help_post.user.name %></p>
-  <p><%= link_to "#{help_post.help_comments.count} コメント", help_post_path(help_post.id) %></p>
-</div>
-<% end %>
 
+                <div class="row mx-4">
+                    <div class="right-content">
+                        <div class="card">
+                            <div class="card-header pb-0">
+                                <div class="row">
+                                    <div class="col-lg-6 col-7">
+                                        <h6>HELP一覧</h6>
+                                    </div>
+                                    <div class="col-lg-6 col-5 my-auto text-end">
+                                        <div class="dropdown float-lg-end">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card-body px-0 pb-2">
+                                <div class="table-responsive">
+                                    <table class="table align-items-center mb-2">
+                                        <thead>
+                                        <tr>
+                                            <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
+                                                画像
+                                            </th>
+                                            <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
+                                                タイトル
+                                            </th>
+                                            <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 w-200">
+                                                参考URL
+                                            </th>
+                                            <%# <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 w-120">-->
+                                                説明 %>
+                                            <!--</th>-->
+                                            <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 w-120">
+                                                ユーザーネーム
+                                            </th>
+                                        </tr>
+                                        </thead>
+                                        <tbody>
+                                        <% @help_posts.each do |help_post| %>
+                                            <tr>
+                                                <td>
+                                                  <%= link_to help_post_path(help_post.id) do %>
+                                                    <%= attachment_image_tag help_post, :image %>
+                                                  <% end %>
+                                                </td>
+                                                <td>
+                                                  <%= help_post.title %>
+                                                </td>
+                                                <td class="align-middle text-center text-sm">
+                                                    <span class="text-xs font-weight-bold"><%= help_post.url %></span>
+                                                </td>
+                                                <!--<td class="align-middle text-center text-sm">-->
+                                                <!--    <span class="text-xs font-weight-bold">%= contact.tel %></span>-->
+                                                <!--</td>-->
+                                                <td class="align-middle text-center text-sm">
+                                                    <span class="text-xs font-weight-bold"><%= help_post.user.name %></span>
+                                                </td>
+                                            </tr>
+                                        <% end %>
+                                        </tbody>
+                                    </table>
+                                    <%# <><%= paginate @contacts %>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <%# <%= render 'admin/shared/footer' %> 
+            </main>
