--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,70 +1,27 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>EngineerManagement</title>
+    <title>Sssytem</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+    <%= stylesheet_link_tag "application", media: "all", 'data-turbolinks-track': "reload" %>
+    <%= stylesheet_pack_tag "style", media: "all", 'data-turbolinks-track': "reload" %>
+    <%= javascript_pack_tag "application", 'data-turbolinks-track': "reload" %>    
+    <link rel="stylesheet" href="https://kit-pro.fontawesome.com/releases/v5.12.1/css/pro.min.css">
   </head>
 
-   <body class="d-flex flex-column vh-100">
-    <header class="shadow-sm">
-      <nav class="navbar navbar-expand-lg navbar-light">
-        <div class="container">
-          <%# <a class="navbar-brand p-3" href="/"><%= image_tag('logo.png')</a> %>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav ml-auto">
-    <% if user_signed_in? %>
-      <li class="nav-item">
-        <%= link_to '投稿フォーム', new_help_post_path %>
-      </li>
-      <li class="nav-item">
-        <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
-      </li>
-      <li class="nav-item">
-        <%= link_to 'マイページ', user_path(current_user.id) %>
-      </li>
-    <% else %>
-      <li class="nav-item">
-        <%= link_to "新規登録", new_user_registration_path %>
-      </li>
-      <li class="nav-item">
-        <%= link_to "ログイン", new_user_session_path %>
-      </li>
-    <% end %>
-    </ul>
-          </div>
-        </div>
-      </nav>
-    </header>
-    <main class="mb-auto">
-    <%= yield %>
-   </main>
-    <footer class="bg-dark text-white pt-5 pb-4">
-      <div class="container">
-        <div class="row no-gutters">
-          <div class="col-md-4">
-            <%# <%= image_tag('logo-white.png') %> %>
-          </div>
-          <div class="col-md-8">
-            <h6 class="text-white mt-2 mb-3">Link</h6>
-            <ul class="p-0 list-unstyled">
-              <li>
-                
-              </li>
-              <li>
-                <a href="" title="License informations" class="text-white-50">プライバシーポリシー</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </footer>
+  <body class="bg-gray-100">
+    <%= render "layouts/shared/header" %>
+    <!-- strat wrapper -->
+    <div class="h-screen flex flex-row flex-wrap">
+      <%= render "layouts/shared/side" %>
+      <%= yield %>
+    </div>
+    <!-- end wrapper -->
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+    <%= javascript_pack_tag "scripts", 'data-turbolinks-track': "reload" %>
+
   </body>
 </html>
